# PatientChatbotDemoProject

./: .gitignore  AGENTS.md  HackathonPlan.md  README.md  pytest.ini
ReadyAI-demo/: .dockerignore  .gitignore  CHATFHIR_orginal_script.md  README.md  docker-compose.yaml  langchain_discovery.py  requirements.txt
ReadyAI-demo/iris/: AGENTS.md  Dockerfile  fhirsqlSetupCommands.txt  iris.cpf  iris.script  roleSetup.script
ReadyAI-demo/langchain_external/readyai_app/: main.py  pyproject.toml
ReadyAI-demo/langchain_external/readyai_app/app/: AGENTS.md  main.py
ReadyAI-demo/langchain_external/readyai_app/app/agent/: get_patient_snapshot.py
ReadyAI-demo/langchain_external/readyai_app/app/pages/: DoctorPage.py  NursePage.py  login_page.py  snapshot_page.py
ReadyAI-demo/langchain_external/readyai_app/readyai_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
chatFHIR-mcp-demo/: ChatFHIR_orginal_script.md  LICENSE  README.md  docker-compose.yaml
docs/: Internal-setup-guide.md  READY2026-AI-Hub-Workshop.pptx  Walkthough.md  ai-hub-eap-gaps.md  ai-hub-suggested-improvements.md  eap-doc-gap-analysis.md  hackathon_plan.md  iris-platform-gaps.md  workshop-participant-guide.md  workshop-slide-deck.md
scripts/: fhir_setup.py
tests/: conftest.py  requirements-test.txt  test_auth.py  test_configstore.py  test_init_chat_model.py  test_init_mcp_client.py  test_langchain_discovery.py  test_mcp_http.py  test_mcp_service_config.py  test_patient_snapshot_agent.py  test_snapshot_chat_page.py  test_sqltool.py  test_streamlit_ui.py  test_tool_access_page.py
(+232 files in other folders)
